[gd_scene load_steps=7 format=3 uid="uid://d07ophj5xiyuj"]

[ext_resource type="Script" path="res://gameOverScreen.gd" id="1_hqggp"]
[ext_resource type="Texture2D" uid="uid://lld8ot0o7gbx" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/hurt/player-hurt-1.png" id="1_ib0vo"]
[ext_resource type="Texture2D" uid="uid://sy7ou1pdq4rj" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/hurt/player-hurt-2.png" id="2_riymf"]
[ext_resource type="Script" path="res://FinalScore.gd" id="3_luhom"]
[ext_resource type="AudioStream" uid="uid://bqn3ennh843k" path="res://Game Sounds/game_over.mp3" id="5_2cvc5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tsaoe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ib0vo")
}, {
"duration": 1.0,
"texture": ExtResource("2_riymf")
}],
"loop": true,
"name": &"hurt_fox",
"speed": 2.0
}]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_hqggp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="GameOver" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = 44.0
offset_right = 286.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="HurtFox" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 232)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_tsaoe")
animation = &"hurt_fox"
frame_progress = 0.968926

[node name="FinalScore" type="Label" parent="."]
offset_left = 360.0
offset_top = 512.0
offset_right = 792.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 50
text = "Final score: 10000"
script = ExtResource("3_luhom")

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2cvc5")

[connection signal="timeout" from="GameOverTimer" to="." method="_on_timer_timeout"]
